[package]
name = "crystal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = {version = "0.10.8"}
bitvec = "1"
rand = "0.8.5"

[features]
# by default uses mode3 = Dilithium3
mode512 = []
mode768 = []
mode1024 = []